--- a/src/app/_pages/group/group.page.html
+++ b/src/app/_pages/group/group.page.html
@@ -8,6 +8,7 @@
       <mat-divider></mat-divider>
       <mat-list-item>Murray Street</mat-list-item>
       <mat-divider></mat-divider>
+      <mat-list-item><button mat-raised-button color="warn" (click)="openDialog()">Create a Group</button></mat-list-item>
     </mat-list>
 
   </mat-sidenav>
