--- a/src/app/_pages/join/join.page.html
+++ b/src/app/_pages/join/join.page.html
@@ -4,15 +4,10 @@
     </mat-toolbar-row>
 </mat-toolbar>
 
-<mat-grid-list cols="4" rowHeight="2:1" [gutterSize]="'10px'">
-    <mat-grid-tile>Pittsburgh</mat-grid-tile>
-    <mat-grid-tile>Squirrel Hill</mat-grid-tile>
-    <mat-grid-tile>Oakland</mat-grid-tile>
-    <mat-grid-tile>Shadyside</mat-grid-tile>
-    <mat-grid-tile>East Liberty</mat-grid-tile>
-    <mat-grid-tile>Walnut Street</mat-grid-tile>
-    <mat-grid-tile>Lawrenceville</mat-grid-tile>
-    <mat-grid-tile>Beeler</mat-grid-tile>
-</mat-grid-list>
+<mat-selection-list #groups cols="4" rowHeight="2:1">
+  <mat-list-option *ngFor="let group of housingGroups">
+    {{group}}
+  </mat-list-option>
+</mat-selection-list>
 
 <button mat-raised-button>Join Groups</button>
