--- a/src/app/_pages/join/join.page.scss
+++ b/src/app/_pages/join/join.page.scss
@@ -1,19 +1,3 @@
-h2 {
-    margin-top: 3rem;
-}
-
-.cards {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-flow: row wrap;
-    align-content: flex-start;
-    landlord-card,
-    property-card {
-        width: 31rem;
-    }
-}
-
 mat-grid-tile {
     background: #0277bd;
     border-radius: 5px;
@@ -23,5 +7,36 @@ button {
     position: absolute; 
     bottom: 15px;
     right: 15px;
-    border: 0px solid #d6d6d6;  
+    border: 0px solid #d6d6d6;
+}
+
+mat-selection-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+mat-selection-list>* {
+    flex: 0 0 20%;
+}
+
+.mat-list-option {
+    background: #383838;
+    margin-top: 10px; 
+    margin-bottom: 10px; 
+    margin-right: 10px; 
+    margin-left: 10px; 
+    border-radius: 5px;
+    align-content: flex-start;
+}
+
+.mat-list-option:hover, .mat-list-option.mat-list-item-focus, .active, mat-list-option[aria-selected="true"] {
+    background: #0277bd !important;
+}
+
+:host {
+    ::ng-deep.mat-pseudo-checkbox{
+      display: none !important;
+    }
 }
