--- a/src/app/_pages/join/join.page.scss
+++ b/src/app/_pages/join/join.page.scss
@@ -5,16 +5,18 @@ mat-grid-tile {
 
 button { 
     position: absolute; 
-    bottom: 15px;
-    right: 15px;
+    bottom: 5%;
+    right: 5%;
     border: 0px solid #d6d6d6;
+    width: 150px;
+    height: 50px;
 }
 
 mat-selection-list {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: center;
+    justify-content: center;
 }
 
 mat-selection-list>* {
@@ -29,6 +31,8 @@ mat-selection-list>* {
     margin-left: 10px; 
     border-radius: 5px;
     align-content: flex-start;
+    text-align: center;
+    height: 15vh;
 }
 
 .mat-list-option:hover, .mat-list-option.mat-list-item-focus, .active, mat-list-option[aria-selected="true"] {
