--- a/src/app/_pages/join/join.page.html
+++ b/src/app/_pages/join/join.page.html
@@ -4,7 +4,7 @@
     </mat-toolbar-row>
 </mat-toolbar>
 
-<mat-selection-list #groups cols="4" rowHeight="2:1">
+<mat-selection-list #groups cols="4" rowHeight="2:1" class="group-selection hide-checkbox">
     <mat-list-option *ngFor="let group of housingGroups">
       {{group}}
     </mat-list-option>
