--- a/src/app/_pages/join/join.page.scss
+++ b/src/app/_pages/join/join.page.scss
@@ -4,7 +4,7 @@ mat-grid-tile {
 }
 
 button {
-    position: absolute; 
+    position: fixed; 
     bottom: 30px;
     right: 30px;
     border: 0px solid #d6d6d6;
@@ -47,12 +47,6 @@ mat-selection-list>* {
 .mat-list-option:hover {
     background-color: rgba($color: #3f3f3f, $alpha: .4);
 }
-
-// :host {
-//     ::ng-deep.mat-pseudo-checkbox{
-//       display: none !important;
-//     }
-// }
 
 input[checkbox] {
     display: none !important;
