Fix button: change color, translucent background across screen

--- a/src/app/_pages/join/join.page.html
+++ b/src/app/_pages/join/join.page.html
@@ -10,4 +10,6 @@
     </mat-list-option>
 </mat-selection-list>
 
-<button mat-raised-button>Join Groups</button>
+<div class="join-groups-button">
+  <button mat-raised-button color="primary">Join Groups</button>
+</div>
