--- a/src/app/_pages/join/join.page.scss
+++ b/src/app/_pages/join/join.page.scss
@@ -3,9 +3,18 @@ mat-grid-tile {
     border-radius: 5px;
 }
 
-button {
+.join-groups-button {
+    width: 100vw;
+    height: 70px;
     position: fixed; 
-    bottom: 30px;
+    bottom: 0px;
+    left: 0px;
+    background-color: rgba(75, 75, 75, 0.5);
+}
+
+button {
+    position: fixed;
+    bottom: 10px;
     right: 30px;
     border: 0px solid #d6d6d6;
     width: 150px;
