Fix styling: differentiate post from comments by adding color and more margins

--- a/src/app/_pages/group/group.page.scss
+++ b/src/app/_pages/group/group.page.scss
@@ -15,3 +15,9 @@
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
 }
+
+.comment {
+  background-color: rgba(255, 255, 255, 0.1);
+  margin-top: 35px;
+  margin-right: 0px;
+}
