--- a/src/app/_pages/group/group.page.dialog.html
+++ b/src/app/_pages/group/group.page.dialog.html
@@ -11,6 +11,6 @@
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">Cancel</button>
+  <button mat-button (click)="submit()">Cancel</button>
   <button mat-button [mat-dialog-close]="[data.name, data.description]" cdkFocusInitial>Ok</button>
 </div>
