--- a/src/app/_pages/group/group.page.html
+++ b/src/app/_pages/group/group.page.html
@@ -1,13 +1,11 @@
 <mat-sidenav-container>
   <mat-sidenav id="sidenav" mode="side" opened>
     <h2>Your Groups</h2>
-    <mat-list>
-      <mat-list-item>Pittsburgh</mat-list-item>
-      <mat-divider></mat-divider>
-      <mat-list-item>Squirrel Hill</mat-list-item>
-      <mat-divider></mat-divider>
-      <mat-list-item>Murray Street</mat-list-item>
-      <mat-divider></mat-divider>
+    <mat-list id="yourGroupsSidebar">
+      <div *ngFor="let group of groups">
+        <mat-list-item>{{ group.title }}</mat-list-item>
+        <mat-divider></mat-divider>
+      </div>
       <mat-list-item><button mat-raised-button color="warn" (click)="openDialog()">Create a Group</button></mat-list-item>
     </mat-list>
 
