--- a/src/app/_pages/group/group.page.html
+++ b/src/app/_pages/group/group.page.html
@@ -2,6 +2,10 @@
   <mat-sidenav id="sidenav" mode="side" opened>
     <h2>Your Groups</h2>
     <mat-list id="yourGroupsSidebar">
+      <p *ngIf="groups.length === 0">
+        You aren't part of any groups right now. You can click below to add one
+        <button routerLink="/dashboard" mat-raised-button color="primary">Dashboard</button>
+      </p>
       <div *ngFor="let group of groups">
         <mat-list-item>{{ group.title }}</mat-list-item>
         <mat-divider></mat-divider>
