--- a/src/app/_pages/group/group.page.html
+++ b/src/app/_pages/group/group.page.html
@@ -4,7 +4,7 @@
     <mat-list id="yourGroupsSidebar">
       <p *ngIf="groups.length === 0">
         You aren't part of any groups right now. You can click below to add one
-        <button routerLink="/dashboard" mat-raised-button color="primary">Dashboard</button>
+        <button routerLink="/join" mat-raised-button color="primary">Join Groups</button>
       </p>
       <div *ngFor="let group of groups">
         <mat-list-item>{{ group.title }}</mat-list-item>
@@ -18,7 +18,7 @@
     <h2>Pittsburgh Group</h2>
     <div class="example-container">
       <form class="new-post-form">
-        <mat-form-field appearance="fill"> 
+        <mat-form-field appearance="fill">
           <mat-label>Title</mat-label>
           <input matInput>
         </mat-form-field>
@@ -43,11 +43,6 @@
             A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
             bred for hunting.
           </p>
-          <mat-card-actions>
-            <button mat-button><mat-icon>thumb_up</mat-icon> LIKE</button>
-            <button mat-button><mat-icon>share</mat-icon> SHARE</button>
-            <button mat-button><mat-icon>report</mat-icon> REPORT</button>
-          </mat-card-actions>
           <mat-card class="comment">
             <mat-card-header>
               <div mat-card-avatar class="example-header-image"></div>
@@ -68,6 +63,11 @@
           </mat-form-field>
           <button mat-raised-button color="primary">Post Comment</button>
         </mat-card-content>
+        <mat-card-actions>
+          <button mat-button>LIKE</button>
+          <button mat-button>SHARE</button>
+          <button mat-button>REPORT</button>
+        </mat-card-actions>
       </mat-card>
     </div>
   </mat-sidenav-content>
