--- a/src/app/_pages/group/group.page.html
+++ b/src/app/_pages/group/group.page.html
@@ -15,7 +15,7 @@
 
   </mat-sidenav>
   <mat-sidenav-content id="main-container">
-    <h2>Pittsburgh Group</h2>
+    <h2>{{ group?.title }}</h2>
     <div class="example-container">
       <form (submit)="post()" [formGroup]="form" #ngFormDirective="ngForm" [ngClass]="{'submit-attempt': submitAttempt}">
         <mat-form-field appearance="fill">
@@ -33,44 +33,8 @@
         </div>
       </form>
 
-      <mat-card class="post">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Shiba Inu</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-            bred for hunting.
-          </p>
-          <mat-card class="comment">
-            <mat-card-header>
-              <div mat-card-avatar class="example-header-image"></div>
-              <mat-card-title>Shiba Inu</mat-card-title>
-              <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-            </mat-card-header>
-            <mat-card-content>
-              <p>
-                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                bred for hunting.
-              </p>
-            </mat-card-content>
-          </mat-card>
-          <mat-form-field appearance="fill">
-            <mat-label>What's on your mind?</mat-label>
-            <textarea matInput></textarea>
-          </mat-form-field>
-          <button mat-raised-button color="primary">Post Comment</button>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-          <button mat-button>REPORT</button>
-        </mat-card-actions>
-      </mat-card>
+      <post-card *ngFor="let post of posts" [post]="post"></post-card>
+
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
