display groups on join group page

--- a/src/app/_pages/join/join.page.html
+++ b/src/app/_pages/join/join.page.html
@@ -5,8 +5,8 @@
 </mat-toolbar>
 
 <mat-selection-list #groups cols="4" rowHeight="2:1" class="group-selection hide-checkbox">
-    <mat-list-option *ngFor="let group of housingGroups">
-      {{group}}
+    <mat-list-option *ngFor="let group of joinGroups">
+      {{group.title}}
     </mat-list-option>
 </mat-selection-list>
 
