Add sidebar link change feature

--- a/src/app/_pages/home/home.page.html
+++ b/src/app/_pages/home/home.page.html
@@ -11,6 +11,6 @@
   </section>
 
   <section *ngIf="authService.isAuthenticated">
-    <h2>Find your <abbr title="etc">stuff</abbr> here</h2>
-    <button routerLink="/dashboard" mat-raised-button color="primary">Dashboard</button>
+    <h2>Join housing groups here: </h2>
+    <button routerLink="/join" mat-raised-button color="primary">Join</button>
   </section>
