used the api service route and linked it to the button click

--- a/src/app/_components/action-snack-bar-with-modal/dialog-overview-example-dialog.html
+++ b/src/app/_components/action-snack-bar-with-modal/dialog-overview-example-dialog.html
@@ -6,5 +6,5 @@
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="data.username" cdkFocusInitial>Ok</button>
+  <button mat-button (click)="submit()" [mat-dialog-close]="data.username" cdkFocusInitial>Ok</button>
 </div>
