--- a/src/app/_components/action-snack-bar-with-modal/snack-bar-component-example-snack.html
+++ b/src/app/_components/action-snack-bar-with-modal/snack-bar-component-example-snack.html
@@ -1,5 +1,5 @@
 <span>
-  Hello! You actually don't have an account yet. So we created one for you. Please add an username
+  Hello! Please add an username
 </span>
 <button mat-raised-button
   (click)="openDialog()"> Add Username </button>
