--- a/src/app/_components/action-snack-bar-with-modal/snack-bar-component-example-snack.html
+++ b/src/app/_components/action-snack-bar-with-modal/snack-bar-component-example-snack.html
@@ -1,8 +1,8 @@
 <span>
-  Hello! Please add an username
+  Hello! Please set your display name. This is the name that will be shown when you post, comment, etc on the site, and will allow users to recognize who you are.
 </span>
 <button mat-raised-button
-  (click)="openDialog()"> Add Username </button>
+  (click)="openDialog()"> Add Display Name </button>
 
 <!-- Copyright 2018 Google Inc. All Rights Reserved.
     Use of this source code is governed by an MIT-style license that
