--- a/src/app/_components/post-card/post-card.html
+++ b/src/app/_components/post-card/post-card.html
@@ -8,25 +8,16 @@
         <p>
         {{ post.body }}
         </p>
-        <mat-card class="comment">
-        <mat-card-header>
-            <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Shiba Inu</mat-card-title>
-            <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-            <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-            bred for hunting.
-            </p>
-        </mat-card-content>
-        </mat-card>
-        <mat-form-field appearance="fill">
-        <mat-label>What's on your mind?</mat-label>
-        <textarea matInput></textarea>
-        </mat-form-field>
-        <button mat-raised-button color="primary">Post Comment</button>
+
+        <comment-card *ngFor="let comment of comments" [comment]="comment"></comment-card>
+
+        <form (submit)="comment()" [formGroup]="commentForm"  #ngFormDirective="ngForm">
+            <mat-form-field appearance="fill">
+            <mat-label>What's on your mind?</mat-label>
+            <textarea matInput formControlName="body"></textarea>
+            </mat-form-field>
+            <button type="submit" mat-raised-button color="primary">Post Comment</button>
+        </form>
     </mat-card-content>
     <mat-card-actions>
         <button mat-button>LIKE</button>
