added a paragraph tag inside the dialog

--- a/src/app/_components/account-snackbar/account-dialog.html
+++ b/src/app/_components/account-snackbar/account-dialog.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Please type your display name below:</h1>
 <div mat-dialog-content>
-  Please set your display name. This is the name that will be shown when you post, comment, etc on the site, and will allow users to recognize who you are.
+  <p> Please set your display name. This is the name that will be shown when you post, comment, etc on the site, and will allow users to recognize who you are. </p>
   <mat-form-field>
     <mat-label>Display Name</mat-label>
     <input matInput [(ngModel)]="data.displayName">
