--- a/src/app/_components/post-card/post-card.html
+++ b/src/app/_components/post-card/post-card.html
@@ -2,7 +2,7 @@
     <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
         <mat-card-title>{{ post.title }}</mat-card-title>
-        <mat-card-subtitle>By: Jacob</mat-card-subtitle>
+        <mat-card-subtitle>By: {{ postAuthorDisplayName }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
         <p>
