displayname is seen on comment

--- a/src/app/_components/comment-card/comment-card.html
+++ b/src/app/_components/comment-card/comment-card.html
@@ -1,6 +1,6 @@
 <mat-card class="comment">
     <mat-card-header>
-        <mat-card-subtitle>By: Jacob</mat-card-subtitle>
+        <mat-card-subtitle>By: {{comment.displayName}}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
         <p>
